# apptrust-utils

./: .env.example  .gitignore  README.md  docker-compose.yml  envs  example_apptrust_predicates.json  example_rego.rego
backend/: Dockerfile  pyproject.toml
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/core/: config.py
backend/app/routers/: rules.py  templates.py  validation.py
backend/app/services/: jfrog.py  rego_validator.py  versioning.py
backend/apptrust_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  rules.ts  templates.ts  validation.ts
frontend/src/components/: EvalResultModal.tsx  RegoEditor.tsx
frontend/src/pages/: RulesPage.tsx  TemplatesPage.tsx
frontend/src/utils/: predicateTransform.test.ts
