[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "apptrust-backend"
version = "0.1.0"
description = "Backend service for managing JFrog AppTrust templates and rules"
authors = [{name = "AppTrust Utils", email = "devnull@example.com"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlmodel>=0.0.16",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "python-dateutil>=2.9.0",
    "alembic>=1.13.1",
    "passlib[bcrypt]>=1.7.4",
    "aiofiles>=23.2.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "httpx>=0.27.0",
    "anyio>=4.3.0"
]
